core/src/test/resources/de/uni_luebeck/isp/tessla/core/errors/annotations/global-annotations-arity-mismatch.tessla
@@foo(5)

def @@foo
in x: Events[Int]

out x